📝chore: 메타 태그 추가

--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
     <meta name="theme-color" content="#000000" />
     <meta name="description" content="naega sogae seo" />
+    <meta property="og:type" content="website" />
+    <meta property="og:site_name" content="너가소개서" />
+    <meta property="og:title" content="너가소개서" />
+    <meta property="og:description" content="나와 함께한 당신이 대신 써 주는, 나의 소개서" />
+    <meta property="og:image" content="../src/assets/images/img_thumbnail.png" />
+    <meta property="og:image:width" content="800" />
+    <meta property="og:image:height" content="400" />
+    <meta property="og:url" content="https://www.neogasogaeseo.com/" />
     <title>너가소개서</title>
     <script src="https://developers.kakao.com/sdk/js/kakao.js"></script>
   </head>
