--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
     <meta property="og:site_name" content="너가소개서" />
     <meta property="og:title" content="너가소개서" />
     <meta property="og:description" content="나와 함께한 당신이 대신 써 주는, 나의 소개서" />
-    <meta property="og:image" content="../src/assets/images/img_thumbnail.png" />
+    <meta property="og:image" content="/src/assets/images/img_thumbnail.png" />
     <meta property="og:image:width" content="800" />
     <meta property="og:image:height" content="400" />
     <meta property="og:url" content="https://www.neogasogaeseo.com/" />
