--- a/public/index.html
+++ b/public/index.html
@@ -18,6 +18,15 @@
     <meta property="og:url" content="https://www.neogasogaeseo.com/" />
     <title>너가소개서</title>
     <script src="https://developers.kakao.com/sdk/js/kakao.js"></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-4DZZ8ZJJYS"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag('js', new Date());
+      gtag('config', 'G-4DZZ8ZJJYS');
+    </script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
