--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,12 @@
     <meta property="og:image:height" content="400" />
     <meta property="og:url" content="https://www.neogasogaeseo.com/" />
     <title>너가소개서</title>
-    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard/dist/web/static/pretendard-dynamic-subset.css" />
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard/dist/web/static/pretendard-dynamic-subset.css"
+      crossorigin="anonymous"
+    />
     <script src="https://developers.kakao.com/sdk/js/kakao.js"></script>
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-4DZZ8ZJJYS"></script>
     <script>
