✨ feat: release 브랜치에 Adsense 추가

--- a/public/index.html
+++ b/public/index.html
@@ -20,6 +20,11 @@
     <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard/dist/web/static/pretendard-dynamic-subset.css" />
     <script src="https://developers.kakao.com/sdk/js/kakao.js"></script>
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-4DZZ8ZJJYS"></script>
+    <script
+      async
+      src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6625943874572956"
+      crossorigin="anonymous"
+    ></script>
     <script>
       window.dataLayer = window.dataLayer || [];
       function gtag() {
