--- a/public/index.html
+++ b/public/index.html
@@ -25,6 +25,11 @@
     />
     <script src="https://developers.kakao.com/sdk/js/kakao.js"></script>
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-4DZZ8ZJJYS"></script>
+    <script
+      async
+      src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6625943874572956"
+      crossorigin="anonymous"
+    ></script>
     <script>
       window.dataLayer = window.dataLayer || [];
       function gtag() {
