--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,7 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
     <meta name="theme-color" content="#000000" />
+    <meta name="description" content="나와 함께한 당신이 대신 써 주는, 나의 소개서" />
     <meta property="og:type" content="website" />
     <meta property="og:site_name" content="너가소개서" />
     <meta property="og:title" content="너가소개서" />
